Application - update MOJ UI

--- a/app/views/ftf/application/index.html
+++ b/app/views/ftf/application/index.html
@@ -23,6 +23,7 @@
 
 
     <p class="govuk-body"><a href="/ftf/application/v2-0/index" target="_blank">V2.0: Application journey (opens in a new tab)</a></p>
+    <p class="govuk-body"><a href="/ftf/application/v2-1/index" target="_blank">V2.1: Application journey (opens in a new tab)</a></p>
 
     <hr style="margin: 40px 0;">
 
@@ -37,26 +38,26 @@
       </summary>
       <div class="govuk-details__text">
           <ul class="govuk-list govuk-list--bullet">
-            <li> <a href="/ftf/application/v2-0/index.html"><strong>Email 1</strong></a> </li>
-            <li> <a href="/ftf/application/v2-0/download.html"><strong>Download application forms</strong></a> </li>
-            <li> <a href="/ftf/application/v2-0/email2.html"><strong>Email 2</strong></a> </li>
+            <li> <a href="/ftf/application/v2-1/index.html"><strong>Email 1</strong></a> </li>
+            <li> <a href="/ftf/application/v2-1/download.html"><strong>Download application forms</strong></a> </li>
+            <li> <a href="/ftf/application/v2-1/email2.html"><strong>Email 2</strong></a> </li>
 
-            <li> <a href="/ftf/application/v2-0/upload.html"><strong>Upload forms and evidence</strong></a> </li>
-            <lu> <a href="/ftf/application/v2-0/form/form1.html">Upload - Application form and appendix</a> </lu><br>
-            <lu> <a href="/ftf/application/v2-0/financial/financial1a.html">Upload - Financial accounts</a> </lu><br>
-            <lu> <a href="/ftf/application/v2-0/linked/linkedq.html">Upload - Linked business accounts</a> </lu><br>
-            <lu> <a href="/ftf/application/v2-0/licences/licences1.html">Upload - Licences and permissions</a> </lu><br>
-            <lu> <a href="/ftf/application/v2-0/project/project1.html">Upload - Project funding</a> </lu><br>
-            <lu> <a href="/ftf/application/v2-0/quotes/quotesq.html">Upload - Quotes and tenders</a> </lu><br>
-            <lu> <a href="/ftf/application/v2-0/vat/vatq.html">Upload - VAT in project costs</a> </lu><br>
-            <lu> <a href="/ftf/application/v2-0/plans/plans1.html">Upload - Plans and drawings</a> </lu><br>
-            <lu> <a href="/ftf/application/v2-0/third/third1.html">Upload - Third-party agreements</a> </lu><br>
-            <lu> <a href="/ftf/application/v2-0/letters/lettersq.html">Upload - Letters of support</a> </lu><br>
-            <lu> <a href="/ftf/application/v2-0/summary.html">Upload - Check your application</a> </lu><br><br>
+            <li> <a href="/ftf/application/v2-1/upload.html"><strong>Upload forms and evidence</strong></a> </li>
+            <lu> <a href="/ftf/application/v2-1/form/form1.html">Upload - Application form and appendix</a> </lu><br>
+            <lu> <a href="/ftf/application/v2-1/financial/financial1a.html">Upload - Financial accounts</a> </lu><br>
+            <lu> <a href="/ftf/application/v2-1/linked/linkedq.html">Upload - Linked business accounts</a> </lu><br>
+            <lu> <a href="/ftf/application/v2-1/licences/licences1.html">Upload - Licences and permissions</a> </lu><br>
+            <lu> <a href="/ftf/application/v2-1/project/project1.html">Upload - Project funding</a> </lu><br>
+            <lu> <a href="/ftf/application/v2-1/quotes/quotesq.html">Upload - Quotes and tenders</a> </lu><br>
+            <lu> <a href="/ftf/application/v2-1/vat/vatq.html">Upload - VAT in project costs</a> </lu><br>
+            <lu> <a href="/ftf/application/v2-1/plans/plans1.html">Upload - Plans and drawings</a> </lu><br>
+            <lu> <a href="/ftf/application/v2-1/third/third1.html">Upload - Third-party agreements</a> </lu><br>
+            <lu> <a href="/ftf/application/v2-1/letters/lettersq.html">Upload - Letters of support</a> </lu><br>
+            <lu> <a href="/ftf/application/v2-1/summary.html">Upload - Check your application</a> </lu><br><br>
 
-            <li> <a href="/ftf/application/v2-0/check.html"><strong>Check your business details</strong></a> </li>
-            <li> <a href="/ftf/application/v2-0/submit.html"><strong>Submit application</strong></a> </li>
-            <li> <a href="/ftf/application/v2-0/confirmation.html"><strong>Confirmation</strong></a> </li>
+            <li> <a href="/ftf/application/v2-1/check.html"><strong>Check your business details</strong></a> </li>
+            <li> <a href="/ftf/application/v2-1/submit.html"><strong>Submit application</strong></a> </li>
+            <li> <a href="/ftf/application/v2-1/confirmation.html"><strong>Confirmation</strong></a> </li>
           </ul>
     
       
