Application - post rehearsal update

--- a/app/views/ftf/application/v2-1/download.html
+++ b/app/views/ftf/application/v2-1/download.html
@@ -67,7 +67,7 @@
 
      <p class="govuk-body">Before you fill in the full application, read:<br>
       <ul class="govuk-list govuk-list--bullet" style="margin-left: 0px;">
-        <li><a href="/_common/not-testing.html" target="_blank">Water Management grant round 2 guidance (opens in a new tab)</a></li>
+        <li><a href="/_common/not-testing.html" target="_blank">Water Management grant manual (opens in a new tab)</a></li>
         <li style="margin-top: 12px;"><a href="/_common/not-testing.html" target="_blank">How to submit a Water Management grant full application (opens in a new tab)</a></li>
       </ul>
     </p>
