--- a/app/views/ftf/application/v2-1/linked/list.html
+++ b/app/views/ftf/application/v2-1/linked/list.html
@@ -98,7 +98,7 @@
 
 <a href="/_common/not-testing.html">
   <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-    Edit businesses
+    Edit business
   </button>
 </a>
 <br>
