--- a/app/views/ftf/application/v2-1/linked/list2.html
+++ b/app/views/ftf/application/v2-1/linked/list2.html
@@ -70,7 +70,7 @@
 
 
   <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-    Edit businesses
+    Edit business
   </button>
 
 <br>
