--- a/app/views/ftf/application/v2-1/quotes/quotes1a.html
+++ b/app/views/ftf/application/v2-1/quotes/quotes1a.html
@@ -32,7 +32,7 @@
 
 
     
-    <span class="govuk-body"><strong>You should check how many quotes or tenders you need to supply.</strong>
+    <span class="govuk-body">You should check how many quotes or tenders you need to supply.
       <br><br>
 
       <table class="govuk-table">
