--- a/app/views/ftf/application/v2-1/quotes/quotes1b.html
+++ b/app/views/ftf/application/v2-1/quotes/quotes1b.html
@@ -30,7 +30,7 @@
       <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Quotes and tenders</h1>
     </a>
     
-    <span class="govuk-body"><strong>You should check how many quotes or tenders you need to supply.</strong>
+    <span class="govuk-body">You should check how many quotes or tenders you need to supply.
       <br><br>
 
       <table class="govuk-table">
