--- a/app/views/ftf/application/v2-1/vat/vatq.html
+++ b/app/views/ftf/application/v2-1/vat/vatq.html
@@ -37,7 +37,7 @@
       </h1>
     </legend>
     <div id="contact-hint" class="govuk-body">
-      You can only include VAT in your project costs if you cannot recover the VAT from HMRC. 
+      You can only include VAT in your project costs if you cannot recover the VAT from HMRC (for example, you are not VAT registered).
     </div>
 
 
