--- a/app/views/ftf/application/v2-1/form/form2.html
+++ b/app/views/ftf/application/v2-1/form/form2.html
@@ -34,7 +34,7 @@
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
         <span class="govuk-warning-text__assistive">Warning</span>
-        Do not upload scanned copies or PDFs of these forms.
+        Do not upload handwritten and scanned copies or PDFs.
       </strong>
     </div>
 
