Application - adding header to download page B

--- a/app/views/ftf/application/v2-1/download2.html
+++ b/app/views/ftf/application/v2-1/download2.html
@@ -73,6 +73,8 @@
 
 
 
+  <h3 class="govuk-heading-m">Documents</h3>
+  <br>
 
 
     <!-- <span class="govuk-body-l"> <a href="/public/downloads/ftf/FTF-Claim-Form.pdf" target="_blank">Grant claim form</a>  -->
