Application - post UR tweaks

--- a/app/views/ftf/application/v2-1/check.html
+++ b/app/views/ftf/application/v2-1/check.html
@@ -27,19 +27,22 @@
     <span class="govuk-caption-xl">Apply for a Water Management Grant</span>
     <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Check your business details</h1>
 
+
     <!--
     <span class="govuk-body">Review and confirm the information below is correct.</span>
 -->
-
 <br><br>
 
+
 <h2 class="govuk-heading-l">Rural Payment Service details</h2>
+<p class="govuk-body">Changing information here will also change it in your Rural Payments service account.</p>
     
+<br>
 <dl class="govuk-summary-list">
 
   <div style="display: flex; justify-content: space-between; align-items: center;">
     <h2 class="govuk-heading-m" style="margin: 0;">Applicant details</h2>
-    <a href="#" style="margin-left: auto;">Change</a>
+    <a href="#" style="margin-left: auto;">Change (opens in a new tab)</a>
   </div>
   
 </dl>
@@ -116,7 +119,7 @@
 
   <div style="display: flex; justify-content: space-between; align-items: center;">
     <h2 class="govuk-heading-m" style="margin: 0;">Business details</h2>
-    <a href="#" style="margin-left: auto;">Change</a>
+    <a href="#" style="margin-left: auto;">Change (opens in a new tab)</a>
   </div>
   
 </dl>
