--- a/app/views/index.html
+++ b/app/views/index.html
@@ -59,6 +59,22 @@
     <h3 class="govuk-heading-m">Phase: Application</h3>
 
 
+
+
+
+    <h4 class="govuk-heading-s">User Research - Round 2 (November 2023)</h4>
+<p class="govuk-body">Prototype (Heroku):<br>
+  <ul class="govuk-list govuk-list--bullet">
+  
+  
+    <li><a href="/ftf/application/v2-1/index" target="_blank">V2.1: Application journey (opens in a new tab)</a></li>
+
+  
+  
+  </ul><br>
+</p>
+
+
     
     <h4 class="govuk-heading-s">User Research - Round 1 (August 2023)</h4>
 <p class="govuk-body">Prototype (Figma):<br>
@@ -67,6 +83,8 @@
   </ul><br>
 </p>
     
+
+
    
 
     <p class="govuk-body">Research findings:</p>
