Adding Claim V3 for a potential Round 3 of testing

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -121,12 +121,22 @@
 <p class="govuk-body">Research findings:</p>
 </span>
 
-<h3 class="govuk-heading-m">Phase: Claims</h3>
+<h3 class="govuk-heading-m">Phase: Claim</h3>
+
+
+<h4 class="govuk-heading-s">User Research - Round 3 (December 2023)</h4>
+<p class="govuk-body">Prototype (Heroku):<br>
+  <ul class="govuk-list govuk-list--bullet">
+    <li><a href="/ftf/claim/v3-0/" target="_blank">FTF Claim v3: Results of R2 (opens in new tab)</a></li>
+  </ul><br>
+</p>
+
+
 
 <h4 class="govuk-heading-s">User Research - Round 2 (October 2023)</h4>
 <p class="govuk-body">Prototypes (Heroku):<br>
   <ul class="govuk-list govuk-list--bullet">
-    <li><a href="/ftf/claim/v2-1/" target="_blank">FTF Claim v2.1: Types of evidence (opens in new tab)</a></li>
+    <li><a href="/ftf/claim/v2-0/" target="_blank">FTF Claim v2.1: Types of evidence (opens in new tab)</a></li>
     <li><a href="/ftf/claim/v2-2/" target="_blank">FTF Claim v2.2: Proof of evidence (opens in new tab)</a></li>
     <li><a href="/ftf/claim/v2-3/" target="_blank">FTF Claim v2.3: Pages of evidence (opens in new tab)</a></li>
   </ul><br>
