Updating emails for Claim V3

--- a/app/views/ftf/claim/v3-0/activity1b.html
+++ b/app/views/ftf/claim/v3-0/activity1b.html
@@ -248,7 +248,7 @@
   </div>
 
 
-  <a href="email" aria-describedby="eligibility-status">
+  <a href="email2" aria-describedby="eligibility-status">
     Move forward
   </a>
 
