--- a/app/views/ftf/claim/v3-0/email.html
+++ b/app/views/ftf/claim/v3-0/email.html
@@ -157,7 +157,7 @@
 
             <strong>What you need to do</strong><br><br>
 
-            You need to check what evidence you must provide in the <a href="activity2">Water Management grant manual (opens in a new tab)</a>.<br><br>
+            You need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual (opens in a new tab)</a>.<br><br>
 
             You need evidence that each item you are claiming for:<br><br>
 
@@ -167,11 +167,11 @@
 
               <br><br>
 
-              <a href="activity1">Download claim form</a>
+              <a href="/_common/not-testing.html">Download claim form</a>
 
               <br><br>
                         
-              When you are ready to submit your claim, <a href="/_common/not-testing.html">upload your claim form and evidence</a> and submit your claim.<br><br>
+              When you are ready to submit your claim, <a href="activity2">upload your claim form and evidence</a> and submit your claim.<br><br>
 
             <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of this form.<br>
 
@@ -194,7 +194,7 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="mailto:FTF@rpa.gov.uk">GSClaimqueries@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">GSClaimqueries@rpa.gov.uk</a></p>
             </div> 
   
            <br>
