--- a/app/views/ftf/claim/v3-0/email2.html
+++ b/app/views/ftf/claim/v3-0/email2.html
@@ -165,7 +165,7 @@
 
               <br><br>
 
-              <a href="activity1">Download claim form</a>
+              <a href="/_common/not-testing.html">Download claim form</a>
 
               <br><br>
                 
@@ -193,7 +193,7 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="mailto:FTF@rpa.gov.uk">GSClaimqueries@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">GSClaimqueries@rpa.gov.uk</a></p>
             </div> 
   
            <br>
