--- a/app/views/ftf/claim/v3-0/index.html
+++ b/app/views/ftf/claim/v3-0/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta content="telephone=no" name="format-detection" /> <!-- need to add formatting for real phone numbers -->
   <meta name="viewport" content="width=device-width" />
-  <title>Water Management Grant - Round 3 (Reference: WM-VMW-1234) - Agreement ready to read and sign</title>
+  <title>Water Management Grant - Round 3 (Reference: WM-VMA-1234) - Agreement ready to read and sign</title>
 
   <style type="text/css">
     @media only screen and (min-device-width: 581px) {
@@ -33,7 +33,7 @@
 
 <body style="font-family: Helvetica, Arial, sans-serif;font-size: 16px;margin: 0;color:#0b0c0c;">
 
-<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Your application for the Water Management Grant - Round 3 (Reference: WM-VMW-1234) has been approved.</span>
+<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Your application for the Water Management Grant - Round 3 (Reference: WM-VMA-1234) has been approved.</span>
 
   <table role="presentation" width="100%" style="border-collapse: collapse;min-width: 100%;width: 100% !important;" cellpadding="0" cellspacing="0" border="0">
     <tr>
@@ -122,34 +122,86 @@
       <td width="10" valign="middle"><br /></td>
       <td style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; max-width: 560px;">
  
-            
-        
-        
-        
-        
+
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-          <strong>Subject line:</strong> Start your Water Management grant claim<br><br>
+
+
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Submit your Water Management grant claim<br><br>
+
+          <script>
+            function navigateToPage() {
+              // Replace 'page2.html' with the actual file or URL for page 2
+              window.location.href = 'email2.html';
+            }
+          </script>
+          
+
           <strong>Business name:</strong> Imaginary Farms Ltd<br>
           <strong>Grant:</strong> Water Management Grant - Round 3<br>
           <strong>Project reference:</strong> WM-VMA-1234</p>
         
           <br>      
      
-                      <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-             <!-- Dear John Smith,<br> -->
-              The claim window is open. You can now start your first claim.<br><br>
-              Your first claim is due by 11:59pm on <strong>31 May 2025</strong>.<br>
+            <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
+              Dear John Smith,<br><br>
+                          
+              Your Water Management grant claim is due by 11:59pm on <br>
+              <strong>31 May 2025</strong>.<br>
             </p>
-            <!--<p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"><strong>What you need to do</strong></p> -->
-            <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"><a style="word-wrap: break-word;" href="activity1">Download and complete the claim form</a></p>
-           <!-- <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"> <p>Read more on <a style="word-wrap: break-word;" href="/_common/not-testing.html">how to fill in a grant application form</a></p>  -->
 
-      
+						
+            <hr style="margin: 30px 0;">
+
+
+
+
+            <strong>What you need to do</strong><br><br>
+
+            You need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual (opens in a new tab)</a>.<br><br>
+
+            You need evidence that each item you are claiming for:<br><br>
+
+              <li>has been purchased (for example, invoices)</li>
+              <li>has been paid for in full (for example, receipts and bank statements - you can cross out other transactions)</li>
+              <li>is in place and operational (for example, photos, videos)</li>
+
+              <br><br>
+
+              <a href="activity1">Download claim form</a>
+
+              <br><br>
+                        
+              When you are ready to submit your claim, <a href="/_common/not-testing.html">upload your claim form and evidence</a> and submit your claim.<br><br>
+
+            <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of this form.<br>
+
+
+
+           <hr style="margin: 30px 0;">
+
+
+
+
+
+       
+            <div class="govuk-details__text">
+              <p class="govuk-body">If you cannot submit your claim by this date, please contact the RPA.</p>
+              <p class="govuk-body">
+                <strong>Telephone</strong><br>
+                Telephone: 03000 200 301<br>
+                Monday to Friday, 8:30am to 5pm (except public holidays)<br>
+                <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a>
+              </p>
+
+              <p class="govuk-body"><strong>Email</strong><br>
+              <a href="/_common/not-testing.html">GSClaimqueries@rpa.gov.uk</a></p>
+            </div> 
+  
+           <br>
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Yours sincerely,</p>
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Rural Payments Agency</p>
+						
 
-
- 
       </td>
       <td width="10" valign="middle"><br /></td>
     </tr>
