--- a/app/views/ftf/_includes/details-block_application-questions-contact.html
+++ b/app/views/ftf/_includes/details-block_application-questions-contact.html
@@ -6,7 +6,10 @@
     </summary>
     <div class="govuk-details__text">
       <p class="govuk-body">If you have any questions about your application, call the RPA and follow the options for the Farming Transformation Fund scheme.</p>
-      <p class="govuk-body"><strong>Telephone</strong><br>Telephone: 03000 200 301<br>Monday to Friday, 8:30am to 5pm (except public holidays)</p>
-      <p class="govuk-body"><strong>Email</strong><br><a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
+      <p class="govuk-body"><strong>Telephone</strong><br>Telephone: 03000 200 301<br>Monday to Friday, 8:30am to 5pm (except public holidays)<br>
+      <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a>
+      </p>
+      
+      <p class="govuk-body"><strong>Email</strong><br><a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
     </div>
   </details>
