Update email2 links

--- a/app/views/ftf/application/v3-0/email2.html
+++ b/app/views/ftf/application/v3-0/email2.html
@@ -185,11 +185,11 @@
 
               <br>
 
-              <a href="activity1">Download the Word application form and Excel appendix</a>
+              <a href="/_common/not-testing.html">Download the Word application form and Excel appendix</a>
 
               <br><br>
                         
-              When you are ready to submit your application, <a href="/_common/not-testing.html">upload your application forms and evidence </a> and submit your application.<br><br>
+              When you are ready to submit your application, <a href="activity1c.html">upload your application forms and evidence </a> and submit your application.<br><br>
 
             <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of these forms.
 
