Update of Agreement and start of EOI

--- a/app/views/ftf/agreement/v2-0/email-reminder2.html
+++ b/app/views/ftf/agreement/v2-0/email-reminder2.html
@@ -126,12 +126,11 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong>Subject line:</strong> 2 weeks left to submit your Water Management grant application<br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Your Water Management grant funding agreement expires soon.<br><br>
 
           <script>
             function navigateToPage() {
-              // Replace 'page2.html' with the actual file or URL for page 2
-              window.location.href = 'email2.html';
+              window.location.href = 'email-reminder1';
             }
           </script>
           
@@ -143,21 +142,12 @@
           <br>      
      
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-              Dear John Smith,<br>
+              Dear John Smith,<br><br>
                           
+              <strong>Reminder: </strong>Your Water Management grant funding agreement will expire at 11:59pm on <strong>31 May 2024</strong>.<br>
             </p>
 
 						
-
-            <strong>Reminder:</strong>
-            Application deadline is 11:59pm on <strong>31 March 2024</strong>.<br><br>
-
-            You have 2 weeks left to submit an application for the Farming Transformation Fund Water Management grant.
-
-
-
-
-
             <hr style="margin: 30px 0;">
 
 
@@ -165,50 +155,22 @@
 
             <strong>What you need to do</strong><br><br>
 
-            Before you fill in the full application, you need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual (opens in a new tab)</a>.<br><br>
+            Your grant funding agreement is ready for you to read and accept.<br><br>
 
-            Evidence will include:<br><br>
+            If you want to accept your grant funding agreement, you must read and accept the agreement by 11:59pm on <strong>31 May 2024</strong> or the offer will expire and we cannot award you a grant.<br><br>
+            
 
-              <li>financial accounts</li>
-              <li>linked businesses and their accounts</li>
-              <li>licences and permissions</li>
-              <li>project funding</li>
-              <li>quotes and tenders</li>
-              <li>VAT in project costs</li>
-              <li>plans and drawings</li>
-              <li>third-party agreements</li>
-              <li>letters of support</li>
-
-              <br>
-
-              You should also read <a href="/_common/not-testing.html">How to submit a Water Management grant full application (opens in a new tab)</a>.<br>
-
-              <br>
-
-              <a href="/_common/not-testing.html">Download the Word application form and Excel appendix</a>
+              <a href="activity1">Read and accept your grant funding agreement</a>
 
               <br><br>
                         
-              When you are ready to submit your application, <a href="activity1c.html">upload your application forms and evidence </a> and submit your application.<br><br>
+              Once you’ve reviewed and accepted your agreement, you can download a copy for your own records.
 
-            <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of these forms.
+              <br><br><br>
 
-            <br><br><br>
+              <strong>Withdrawing your application</strong><br><br>
 
-            <strong>You must not start the project</strong>
-
-            <br><br>
-            Starting the project or committing to any costs (such as placing orders) before you receive a funding agreement will invalidate your application.
-
-            <br><br>
-
-            Before you start the project, you can:<br><br>
-
-            <li>get quotes from suppliers</li>
-            <li>apply for planning permission or any other licences or permissions required</li>
-
-
-
+              If you do not want to accept your agreement, you should <a href="activity1">withdraw your application</a>.<br>
 
 
            <hr style="margin: 30px 0;">
@@ -217,15 +179,17 @@
 
 
 
+
+
+
+
+
+
        
             <div class="govuk-details__text">
-              <p class="govuk-body"><strong>If you have questions about your application</strong>
-                <br><br>
-                If you have any questions about your application, call the RPA and follow the options for the Farming Transformation Fund scheme.
+              <strong>Questions about your agreement</strong><br><br>
               
-              
-              </p>
-              
+              If you have any questions about your agreement, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
               
               <p class="govuk-body">
                 <strong>Telephone</strong><br>
