--- a/app/views/index.html
+++ b/app/views/index.html
@@ -38,11 +38,23 @@
     </ul>
 
 
-<hr id="high-fidelity-design" style="margin: 40px 0;">
+<hr id="high-fidelity-design" style="margin: 40px 0; height: 3px;">
+
+
+
     <h2 class="govuk-heading-l">High-fidelity design</h2>
 
     <span class="content-section">    
-    <h3 class="govuk-heading-m">Phase: Expression of Interest</h3>
+    <h3 class="govuk-heading-m">Expression of Interest</h3>
+
+
+    <h4 class="govuk-heading-s">User Research - Round 3 (TBD 2024)</h4>
+    <p class="govuk-body">Prototype (Heroku):</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="/ftf/eoi/v2-0/" target="_blank">EOI prototype (opens in new tab)</a></li>
+      </ul>
+
+<br><br>
 
     <h4 class="govuk-heading-s">User Research - Round 1 (September 2023)</h4>
 <p class="govuk-body">Prototype (Figma):</p>
@@ -50,31 +62,35 @@
     <li><a href="https://www.figma.com/proto/Z1i53yz6r8Eijed6ATBwze/Future-Grants---Transactional-journey-designs?page-id=1264%3A86086&type=design&node-id=1448-79466&viewport=479%2C386%2C0.06&t=NChslwdzbEfB3QFx-8&scaling=min-zoom&starting-point-node-id=1448%3A79466&hotspot-hints=0&hide-ui=1" target="_blank">EOI prototype (opens in new tab)</a></li>
   </ul>
 <br>
-<p class="govuk-body">Research findings:</p>
+
+
+<hr id="service-design" style="margin: 40px 0; width: 70%;">
+
+
+
+
 
 </span>
 
 
     <span class="content-section">
-    <h3 class="govuk-heading-m">Phase: Application</h3>
+    <h3 class="govuk-heading-m">Application</h3>
 
 
-
+    <h4 class="govuk-heading-s">User Research - Round 3 (TBD 2024)</h4>
+<p class="govuk-body">Prototype (Heroku):<br>
+  <ul class="govuk-list govuk-list--bullet">
+    <li><a href="/ftf/application/v3-0/index" target="_blank">V3.0: Application journey (opens in a new tab)</a></li>
+  </ul><br>
+</p>
 
 
     <h4 class="govuk-heading-s">User Research - Round 2 (November 2023)</h4>
 <p class="govuk-body">Prototype (Heroku):<br>
   <ul class="govuk-list govuk-list--bullet">
-  
-  
     <li><a href="/ftf/application/v2-1/index" target="_blank">V2.1: Application journey (opens in a new tab)</a></li>
-
-  
-  
   </ul><br>
 </p>
-
-
     
     <h4 class="govuk-heading-s">User Research - Round 1 (August 2023)</h4>
 <p class="govuk-body">Prototype (Figma):<br>
@@ -85,17 +101,30 @@
     
 
 
-   
-
-    <p class="govuk-body">Research findings:</p>
     </span>
 
 
+    <hr id="service-design" style="margin: 40px 0; width: 70%;">
+
+
+
+
+
   <span class="content-section"> 
-    <h3 class="govuk-heading-m">Phase: Grant Funding Agreement</h3>
+    <h3 class="govuk-heading-m">Grant Funding Agreement</h3>
 
 <!-- <p class="govuk-body-l">Prototype links:</p>
 <p>Prototype links:</p> -->
+
+
+<h4 class="govuk-heading-s">User Research - Round 3 (TBD 2024)</h4>
+<p class="govuk-body">Prototypes (Heroku):<br>
+  <ul class="govuk-list govuk-list--bullet">
+    <li><a href="/ftf/agreement/v2-0/" target="_blank">FTF v2.0: Online agreement (opens in new tab)</a></li>
+  </ul><br>
+</p>
+
+
 
 <h4 class="govuk-heading-s">User Research - Round 2 (September 2023)</h4>
 <p class="govuk-body">Prototypes (Heroku):<br>
@@ -106,11 +135,8 @@
     <li><a href="/fetf/agreement/v1-2/" target="_blank">FETF v1.2: Online agreement - multiple screens (opens in new tab)</a></li>
   </ul><br>
 </p>
-<p class="govuk-body">
-<a href="/ftf/agreement/index" target="_blank">User research landing page</a>
-<p>
+
 <br>
-<p class="govuk-body">Research findings:</p>
 
 <h4 class="govuk-heading-s">User Research - Round 1 (August 2023)</h4>
 <p class="govuk-body">Prototype (Figma):</p>
@@ -118,10 +144,14 @@
     <li><a href="https://www.figma.com/proto/Z1i53yz6r8Eijed6ATBwze/Future-Grants---Transactional-journey-designs?page-id=941%3A80336&type=design&node-id=2975-80643&viewport=749%2C283%2C0.14&t=6JWuK5oP9fZN4RPx-8&scaling=min-zoom&starting-point-node-id=950%3A80338&hotspot-hints=0&hide-ui=1" target="_blank">Agreement prototype (opens in new tab)</a></li>
   </ul>
   <br>
-<p class="govuk-body">Research findings:</p>
 </span>
 
-<h3 class="govuk-heading-m">Phase: Claim</h3>
+
+
+<hr id="service-design" style="margin: 40px 0; width: 70%;">
+
+
+<h3 class="govuk-heading-m">Claim</h3>
 
 
 <h4 class="govuk-heading-s">User Research - Round 3 (December 2023)</h4>
@@ -150,9 +180,8 @@
   </ul><br>
 </p>
 
-<p class="govuk-body">Research findings:</p>
 
-<hr id="low-fidelity-design" style="margin: 40px 0;">
+<hr id="high-fidelity-design" style="margin: 40px 0; height: 3px;">
 
 <h2 class="govuk-heading-l">Low-fidelity design</h2>
 
@@ -162,7 +191,7 @@
 <p class="govuk-body">E2E flow diagram: <a href="https://app.mural.co/t/1010defra0589/m/1010defra0589/1682675098512/bad82167914a454cbcf8a9378b175be62b00ca51?wid=7-1682675140064" target="_blank">E2E flow v1.0 - Mural (opens in new tab)</a></p>
 </span>
 
-<hr id="service-design" style="margin: 40px 0;">
+<hr id="high-fidelity-design" style="margin: 40px 0; height: 3px;">
 
 <h2 class="govuk-heading-l">Service design</h2>
 
