--- a/app/views/ftf/eoi/v2-0/index.html
+++ b/app/views/ftf/eoi/v2-0/index.html
@@ -1,219 +1,164 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+{% extends "layouts/main-application-round-2.html" %}
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta content="telephone=no" name="format-detection" /> <!-- need to add formatting for real phone numbers -->
-  <meta name="viewport" content="width=device-width" />
-  <title>Water Management Grant - Round 3 (Reference: WM-VMA-1234) - Agreement ready to read and sign</title>
+{% set pageName="Download claim form" %}
 
-  <style type="text/css">
-    @media only screen and (min-device-width: 581px) {
-      .content {
-        width: 580px !important;
-      }
-    }
-    body { margin:0 !important; }
-    div[style*="margin: 16px 0"] { margin:0 !important; }
-  </style>
+{% block content %}
 
-  <!--[if gte mso 9]>
-    <style type="text/css">
-      li {
-        margin-left: 4px !important;
-      }
-      table {
-        mso-table-lspace: 0pt;
-        mso-table-rspace: 0pt;
-      }
-    </style>
-  <![endif]-->
+<div class="govuk-phase-banner">
+  <p class="govuk-phase-banner__content">
+    <strong class="govuk-tag govuk-phase-banner__content__tag">
+      Alpha
+    </strong>
+    <span class="govuk-phase-banner__text">
+      This is a new service – your <a class="govuk-link" href="/_common/not-testing.html">feedback</a> will help us to improve it.
+    </span>
+  </p>
+</div>
 
+
+<div class="govuk-breadcrumbs">
+  <ol class="govuk-breadcrumbs__list">
+    <li class="govuk-breadcrumbs__list-item">
+      <a class="govuk-breadcrumbs__link" href="/_common/not-testing.html">Home</a>
+    </li>
+    <li class="govuk-breadcrumbs__list-item">
+      <a class="govuk-breadcrumbs__link" href="/_common/not-testing.html">Environment</a>
+    </li>
+    <li class="govuk-breadcrumbs__list-item">
+      <a class="govuk-breadcrumbs__link" href="/_common/not-testing.html">Food and farming</a>
+    </li>
+  </ol>
+</div>
+
+<br>
+
+<img src="/public/images/rpa_logo.png" style="scale: 100%;" alt="logo of the rural payment agency">
+
+<br><br><br>
+
+<style>
+  .blue-box {
+    background-color: #1D70B8; /* Blue color */
+    height: 280px; /* Adjust the height as needed */
+    width: 900px; 
+    color: white; /* Text color */
+    padding: 30px; /* Spacing around the text */
+  }
+
+</style>
 </head>
+<body>
 
-<body style="font-family: Helvetica, Arial, sans-serif;font-size: 16px;margin: 0;color:#0b0c0c;">
-
-<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Your application for the Water Management Grant - Round 3 (Reference: WM-VMA-1234) has been approved.</span>
-
-  <table role="presentation" width="100%" style="border-collapse: collapse;min-width: 100%;width: 100% !important;" cellpadding="0" cellspacing="0" border="0">
-    <tr>
-      <td width="100%" height="53" bgcolor="#0b0c0c">
-        <!--[if (gte mso 9)|(IE)]>
-          <table role="presentation" width="580" align="center" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;width: 580px;">
-            <tr>
-              <td>
-        <![endif]-->
-        <table role="presentation" width="100%" style="border-collapse: collapse;max-width: 580px;" cellpadding="0" cellspacing="0" border="0" align="center">
-          <tr>
-            <td width="70" bgcolor="#0b0c0c" valign="middle">
-              <a href="https://www.gov.uk" title="Go to the GOV.UK homepage" style="text-decoration: none;">
-                <table role="presentation" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
-                  <tr>
-                    <td style="padding-left: 10px">
-                      <img
-                        src="https://static.notifications.service.gov.uk/images/gov.uk_logotype_crown.png"
-                        alt=" "
-                        height="32"
-                        border="0"
-                        style="Margin-top: 4px;"
-                      />
-                    </td>
-                    <td style="font-size: 28px; line-height: 1.315789474; Margin-top: 4px; padding-left: 10px;">
-                      <span style="
-                        font-family: Helvetica, Arial, sans-serif;
-                        font-weight: 700;
-                        color: #ffffff;
-                        text-decoration: none;
-                        vertical-align:top;
-                        display: inline-block;
-                          ">GOV.UK</span>
-                    </td>
-                  </tr>
-                </table>
-              </a>
-            </td>
-          </tr>
-        </table>
-        <!--[if (gte mso 9)|(IE)]>
-              </td>
-            </tr>
-          </table>
-        <![endif]-->
-      </td>
-    </tr>
-  </table>
-  <table
-      role="presentation" class="content" align="center" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;max-width: 580px; width: 100% !important;" width="100%">
-    <tr>
-      <td width="10" height="10" valign="middle"></td>
-      <td>
-        <!--[if (gte mso 9)|(IE)]>
-          <table role="presentation" width="560" align="center" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;width: 560px;">
-            <tr>
-              <td height="10">
-        <![endif]-->
-                <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
-                  <tr>
-                    <td bgcolor="#005EA5" width="100%" height="10"></td>
-                  </tr>
-                </table>
-        <!--[if (gte mso 9)|(IE)]>
-              </td>
-            </tr>
-          </table>
-        <![endif]-->
-      </td>
-      <td width="10" valign="middle" height="10"></td>
-    </tr>
-  </table>
-  <table
-      role="presentation"
-      class="content"
-      align="center"
-      cellpadding="0"
-      cellspacing="0"
-      border="0"
-      style="border-collapse: collapse;max-width: 580px; width: 100% !important;"
-      width="100%">
-    <tr>
-      <td height="30"><br /></td>
-    </tr>
-    <tr>
-      <td width="10" valign="middle"><br /></td>
-      <td style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; max-width: 560px;">
- 
-
-        <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-
-
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Application approved: Water Management grant<br><br>
-
-          <script>
-            function navigateToPage() {
-              window.location.href = 'index2.html';
-            }
-          </script>
-          
-
-          <strong>Business name:</strong> Imaginary Farms Ltd<br>
-          <strong>Grant:</strong> Water Management Grant - Round 3<br>
-          <strong>Project reference:</strong> WM-VMA-1234</p>
-        
-          <br>      
-     
-            <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-              Dear John Smith,<br><br>
-                          
-              Your application for the Water Management Grant - Round 3 (Reference: WM-VMA-1234) has been approved.<br>
-            </p>
-
-						
-            <hr style="margin: 30px 0;">
-
-
-
-
-            <strong>What you need to do</strong><br><br>
-
-            Your grant funding agreement is ready for you to read and accept.<br><br>
-
-            You must read and accept the agreement by 11:59pm on <strong>31 May 2024</strong> or the offer will expire and we cannot award you a grant.<br><br>
-            
-
-              <a href="activity">Read and accept your grant funding agreement</a>
-
-              <br><br>
-                        
-              Once you’ve reviewed and accepted your agreement, you can download a copy for your own records.
-
-              <br><br><br>
-
-              <strong>Withdrawing your application</strong><br><br>
-
-              If you do not want to accept your agreement, you should <a href="activity1">withdraw your application</a>.<br>
-
-
-           <hr style="margin: 30px 0;">
-
-
-
-
-
-
-
-
-
-
-
-       
-            <div class="govuk-details__text">
-              <strong>Questions about your agreement</strong><br><br>
-              
-              If you have any questions about your agreement, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
-              
-              <p class="govuk-body">
-                <strong>Telephone</strong><br>
-                Telephone: 03000 200 301<br>
-                Monday to Friday, 8:30am to 5pm (except public holidays)<br>
-                <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a>
-              </p>
-
-              <p class="govuk-body"><strong>Email</strong><br>
-              <a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
-            </div> 
-  
-           <br>
-            <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Yours sincerely,</p>
-            <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Rural Payments Agency</p>
-						
-
-      </td>
-      <td width="10" valign="middle"><br /></td>
-    </tr>
-    <tr>
-      <td height="30"><br /></td>
-    </tr>
-  </table>
+<div class="blue-box">
+  <p class="govuk-body-l" style="color: white;">Guidance</p>
+  <h1 class="govuk-heading-xl" style="color: white;">Check if you can apply for a Farming Transformation Fund Water Management grant Round 3</h1>
+  <p class="govuk-body" style="color: white;">Updated 27 December 2023</p>
+</div>
 
 </body>
-</html>
+
+<br><br>
+
+    <div style="width: 960px; height: 56px; position: relative; background: #F3F2F1;">
+      <p class="govuk-body" style="margin-top: 15px; position: absolute; left: 40px;"><strong>Applies to England</strong></p>
+    </div>
+    
+<br>
+
+<div class="govuk-width-container">
+  <main class="govuk-main-wrapper">
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+      </div>
+    </div>
+
+    <div class="govuk-grid-row">
+      
+      <div class="govuk-grid-column-one-third">
+        <p class="govuk-body">Contents</p>
+        <p class="govuk-body"> <a href="/_common/not-testing.html">Check if you can apply for a Farming Transformation Fund Water Management grant Round 3</a></p>
+        <p class="govuk-body"> <a href="/_common/not-testing.html">Who can apply</a></p>
+        <p class="govuk-body"> <a href="/_common/not-testing.html">Before you start</a></p>
+        <p class="govuk-body"> <a href="/_common/not-testing.html">Problems using the online service</a></p>
+      </div>
+
+
+      <div class="govuk-grid-column-two-thirds">
+        <h2 class="govuk-heading-l">Check if you can apply for a Farming Transformation Fund Water Management grant Round 3</h2>
+        <p class="govuk-body">Use this service to:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>check if you can apply for a grant for your project (takes about 5 minutes)</li>
+          <li>check how well your project fits the funding priorities (takes about 15 minutes if you have all the project details)</li>
+        </ul>
+
+      <br><br>
+
+
+        <h2 class="govuk-heading-l">Who can apply</h2>
+        <p class="govuk-body">You can apply if you:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>grow crops for the food industry, are a nursery growing ornamentals or are a forestry nursery</li>
+          <li>will do the grant-funded work in England</li>
+          <li>an estimate the project costs will be over £87,500</li>
+        </ul>
+
+      
+      <div class="govuk-inset-text">
+        If your project is eligible, you can log in to your Rural Payments service account to register your interest and request the full application form.<br><br>
+        If you don't have an account, you can <a href="/_common/not-testing.html">create an account with the Rural Payments service</a>.
+      </div>
+      
+      
+      
+      <br><br>
+
+
+
+
+
+      <h2 class="govuk-heading-l">Before you start</h2>
+      <p class="govuk-body">You need:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>information about your business (for example, number of employees and turnover)</li>
+        <li>information about the project (for example, irrigated land in hectares)</li>
+        <li>estimated total cost of the items you need</li>
+      </ul>
+      <p class="govuk-body">If you do not enter any information for more than 20 minutes, your application will time out and you will have to start again.</p>
+
+
+      <br><br>
+
+
+      
+    <a href="q1-status" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+      Start now
+      <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+        <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+      </svg></a>
+      
+      
+      <br>
+
+
+      <h2 class="govuk-heading-m">Problems using the online service</h2>
+        <p class="govuk-body">If you have any problems with the service, call the RPA and follow the options for the Farming Transformation Fund scheme.</p>
+        <p class="govuk-body"><strong>Telephone</strong><br>Telephone: 03000 200 301<br>Monday to Friday, 8:30am to 5pm (except public holidays)<br>
+        <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a>
+        </p>
+        <p class="govuk-body"><strong>Email</strong><br><a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
+   
+      
+      </div>
+     
+      
+    
+    </div>
+  </main>
+</div>
+
+
+
+
+</main>
+
+{% endblock %}
