Adding Back buttons to EOI

--- a/app/views/ftf/eoi/v2-0/b-details.html
+++ b/app/views/ftf/eoi/v2-0/b-details.html
@@ -15,7 +15,10 @@
   </p>
 </div>
 
-<br>
+
+<a href="#" class="govuk-back-link">Back</a>
+
+
 
 <div class="govuk-width-container">
   <main class="govuk-main-wrapper">
