--- a/app/views/ftf/eoi/v2-0/p-details.html
+++ b/app/views/ftf/eoi/v2-0/p-details.html
@@ -15,7 +15,8 @@
   </p>
 </div>
 
-<br>
+<a href="#" class="govuk-back-link">Back</a>
+
 
 <div class="govuk-width-container">
   <main class="govuk-main-wrapper">
