Updates to EOI content

--- a/app/views/ftf/eoi/v2-0/confirmation.html
+++ b/app/views/ftf/eoi/v2-0/confirmation.html
@@ -78,7 +78,9 @@
       <p class="govuk-body">Before you start the project, you can:<br>
         <ul class="govuk-list govuk-list--bullet">
           <li>get quotes from suppliers</li>
-          <li>apply for planning permission or an abstraction licence</li>
+          <li>apply for planning permission or any other licences or permissions required</li>
+          <li>check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual (opens in a new tab)</a></li>
+          <li>read <a href="/_common/not-testing.html">How to submit a Water Management grant full application (opens in a new tab)</a></li>
         </ul>
       </p>
 
