--- a/app/views/ftf/eoi/v2-0/email.html
+++ b/app/views/ftf/eoi/v2-0/email.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta content="telephone=no" name="format-detection" /> <!-- need to add formatting for real phone numbers -->
   <meta name="viewport" content="width=device-width" />
-  <title>Water Management Grant - Round 3 (Reference: WM-VMA-1234) - Agreement ready to read and sign</title>
+  <title>Water Management Grant - Round 3 (Reference: WM-VMA-1234) - EOI received</title>
 
   <style type="text/css">
     @media only screen and (min-device-width: 581px) {
@@ -126,16 +126,9 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Application approved: Water Management grant<br><br>
+          <strong>Subject line:</strong> Water Management grant EOI received<br><br>
 
-          <script>
-            function navigateToPage() {
-              window.location.href = 'index2.html';
-            }
-          </script>
-          
-
-          <strong>Business name:</strong> Imaginary Farms Ltd<br>
+            <strong>Business name:</strong> Imaginary Farms Ltd<br>
           <strong>Grant:</strong> Water Management Grant - Round 3<br>
           <strong>Project reference:</strong> WM-VMA-1234</p>
         
@@ -144,52 +137,39 @@
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
                           
-              Your application for the Water Management Grant - Round 3 (Reference: WM-VMA-1234) has been approved.<br>
+              Thank you for registering your interest in the Water Management grant.<br>
             </p>
 
 						
-            <hr style="margin: 30px 0;">
+            <strong>What happens next</strong><br><br>
 
+            The RPA will be in touch by <strong>24 February 2024</strong>. They will tell you if your project scored well enough to get the full application form.<br><br>
 
-
-
-            <strong>What you need to do</strong><br><br>
-
-            Your grant funding agreement is ready for you to read and accept.<br><br>
-
-            You must read and accept the agreement by 11:59pm on <strong>31 May 2024</strong> or the offer will expire and we cannot award you a grant.<br><br>
+            If you submit an application, RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.<br><br>
             
+            If your application is successful, you’ll be sent a funding agreement and can begin work on the project.<br><br>
 
-              <a href="activity">Read and accept your grant funding agreement</a>
+            <strong>You must not start the project</strong><br><br>
 
-              <br><br>
-                        
-              Once you’ve reviewed and accepted your agreement, you can download a copy for your own records.
-
-              <br><br><br>
-
-              <strong>Withdrawing your application</strong><br><br>
-
-              If you do not want to accept your agreement, you should <a href="activity1">withdraw your application</a>.<br>
+            Starting the project or committing to any costs (such as placing orders) before you receive a funding agreement will invalidate your application.<br>
 
 
+
+            <p class="govuk-body">Before you start the project, you can:<br>
+              <ul class="govuk-list govuk-list--bullet">
+                <li>get quotes from suppliers</li>
+                <li>apply for planning permission or any other licences or permissions required</li>
+                <li>check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual (opens in a new tab)</a></li>
+                <li> read <a href="/_common/not-testing.html">How to submit a Water Management grant full application (opens in a new tab)</a></li>
+              </ul>
+            </p>
+        
            <hr style="margin: 30px 0;">
-
-
-
-
-
-
-
-
-
-
-
        
             <div class="govuk-details__text">
-              <strong>Questions about your agreement</strong><br><br>
+              <strong>If you have questions</strong><br><br>
               
-              If you have any questions about your agreement, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
+              If you have any questions, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
               
               <p class="govuk-body">
                 <strong>Telephone</strong><br>
