--- a/app/views/ftf/application/v3-0/check.html
+++ b/app/views/ftf/application/v3-0/check.html
@@ -35,7 +35,7 @@
 
 
 <h2 class="govuk-heading-l">Rural Payment Service details</h2>
-<p class="govuk-body">Changing information here will also change it in your Rural Payments service account.</p>
+<p class="govuk-body">Changes in this section will update your Rural Payments service account.</p>
     
 <br>
 <dl class="govuk-summary-list">
