--- a/app/views/ftf/eoi/v2-0/check.html
+++ b/app/views/ftf/eoi/v2-0/check.html
@@ -24,7 +24,7 @@
   <div class="govuk-grid-column-two-thirds">
 
 <h2 class="govuk-heading-l">Check your details</h2>
-<p class="govuk-body">Changing information here will also change it in your Rural Payments service account.</p>
+<p class="govuk-body">Changes in this section will update your Rural Payments service account.</p>
     
 <br>
 
